app/assets/stylesheets/custom.css.scss
@import 'defs';

body {
  background-color: $white-color;
}

#page {
  min-height: 500px;
  padding-bottom: $footer-height;
}

header, footer {
  background-color: $primary-color;
  color: $light-text-color;
  position: relative;
}

footer {
  z-index: 10;
  padding: $padding-size;
}

header.main {
  z-index: 10;
}

#logo {
 align-content: center;
}

header.main {
  background: $primary-color image-url('banner.png') no-repeat center center;
  @include background-size(cover);
  height: 83vh;
  
  .container {
    position: relative;
    top: 10vh;
    
    .row {
      padding: $padding-size;
    }
  }
}

.fixed {
  @include border-box;
  position: fixed;
  top: 0;
  width: 100%;
  left: 0;
}

#get in the mix {
  display: inline-block;
  float: left;
  margin: 0px;  
}
  
#coming_soon { 
  display: inline-block;
  float: left;
  margin: $padding-size;
}

#submit.fixed {
  display: inline-block;
  float: left;
  margin: 0px;
}

header.fixed {
  height: 60px;
  z-index: 5;
  padding-top: 10px;
}

div.fixed {
  z-index: 15;
}

footer {
  @include border-box();
  position: fixed;
  width: 100%;
  bottom: 0;
  left: 0;
  height: $footer-height;
}

.center {
  width: $content-width;
  margin: 0 auto;
  overflow: hidden;
}

.right {
  text-align:right;
}

.accent {
  color: $accent-color;
}

section {
  padding-top: $padding-size;
  padding-bottom: $padding-size;
}

section.container {
  margin-bottom: 50px;
}
 
.glyphicon {
  padding-top: $padding-size;
  font-size: 48px;
}

#pathphoto {
  background: $primary-color image-url('pathusplash.png') no-repeat center center;
  @include background-size(cover);
  height: 800px;
  
  .container {
    margin-top: 300px;
    
    h1 {
      color: $white-color;
    }
  }
  
}


  

